--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <link rel="stylesheet" href="index.css">
     </head>
+    <title>Scorecard</title>
     <body>
         <div class="container">
             <div id="s1">
